--- a/作业5/计算方法上机实习5实习报告.md
+++ b/作业5/计算方法上机实习5实习报告.md
@@ -1,17 +1,16 @@
 [TOC]
 
-#计算方法上机实习五 实习报告
+# 计算方法上机实习五 实习报告
 
 2019级 大气科学学院 赵志宇
 
 学号：191830227
 
-##一、编程流程图
+## 一、编程流程图
 
-![jsff5.drawio](E:\学习\2021~2022第一学期（大三上）\计算方法\作业5\jsff5.drawio.png)
+![jsff5.drawio](jsff5.drawio.png)
 
-
-##二、源代码
+## 二、源代码
 
 源文件：jsff5.f90
 
@@ -158,7 +157,7 @@ end subroutine bisection
 
 
 
-##三、运行结果
+## 三、运行结果
 
 编译指令（在jsff5.f90所在的目录执行）：
 
@@ -168,9 +167,9 @@ gfortran jsff5 -o jsff5 && ./jsff5
 
 ![result](result.png)
 
-##四、分析报告
+## 四、分析报告
 
-###1.问题分析
+### 1.问题分析
 
 通过使用迭代法解非线性方程$f(x)=x^2-a=0$来计算$sqrt(a)$，其中a=1928332946.
 
@@ -185,7 +184,7 @@ gfortran jsff5 -o jsff5 && ./jsff5
 
 ### 2.算法细节
 
-####（1）Newton迭代法的实现
+#### （1）Newton迭代法的实现
 
 Newton迭代法的公式为$x_{k+1}=x_k-\frac{f(x_k)}{f^\prime(x_k)},(k=0,1,2\cdots)$.
 
@@ -229,7 +228,7 @@ $f(0)<0,f(a)>0$, 选取初始区间为$[0,a]$.
 
 Newton迭代法在子程序bisection中实现.
 
-###3.编程思路
+### 3.编程思路
 
 主要子程序：
 
@@ -237,7 +236,7 @@ newton_iteration(a_double, eps) 实现Newton迭代
 
 bisection(a_double, eps) 实现二分法
 
-###4.运行结果分析
+### 4.运行结果分析
 
 #### （1）Newton迭代
 
