--- a/作业7/计算方法上机实习7实习报告.md
+++ b/作业7/计算方法上机实习7实习报告.md
@@ -13,6 +13,8 @@
 
 源文件：jsff7.f90, subroutines.f90
 
+辅助工具：xls2arr.py（将 .xls 文件转化成 fortran 容易读取的 .txt 文件）, plot_wind.py（绘制风场）
+
 ~~~fortran
 ! jsff7.f90
 program jsff7
@@ -137,6 +139,128 @@ subroutine calc_uv(phi, U_p, V_p, h)
 end subroutine calc_uv
 ~~~
 
+~~~python
+# xls2arr.py
+import pandas as pd
+import numpy as np
+import re
+
+x = np.linspace(-2.25, 2.25, 19)
+y = np.linspace(-2.25, 2.25, 19)
+grid = np.meshgrid(x, y)
+
+dfU = pd.read_excel('u.xls', usecols=range(1, 18))
+dfV = pd.read_excel('v.xls', usecols=range(1, 18))
+
+U = dfU.values.transpose()
+V = dfV.values.transpose()
+U = np.insert(U, 0, values=np.zeros(17), axis=0)
+U = np.insert(U, 18, values=np.zeros(17), axis=0)
+U = np.insert(U, 0, values=np.zeros(19), axis=1)
+U = np.insert(U, 18, values=np.zeros(19), axis=1)
+V = np.insert(V, 0, values=np.zeros(17), axis=0)
+V = np.insert(V, 18, values=np.zeros(17), axis=0)
+V = np.insert(V, 0, values=np.zeros(19), axis=1)
+V = np.insert(V, 18, values=np.zeros(19), axis=1)
+
+np.set_printoptions(linewidth=np.inf)
+with open('u.txt', 'w') as f:
+    f.write(' ')
+    f.write(re.sub('[\[\]]', '', np.array_str(U)))
+    f.close()
+
+with open('v.txt', 'w') as f:
+    f.write(' ')
+    f.write(re.sub('[\[\]]', '', np.array_str(V)))
+    f.close()
+
+with open('grid.txt', 'w') as f:
+    f.write(' ')
+    f.write(re.sub('[\[\]]', '', np.array_str(grid[0].transpose())))
+    f.write('\n\n ')
+    f.write(re.sub('[\[\]]', '', np.array_str(grid[1].transpose())))
+    f.close()
+~~~
+
+~~~python
+# plot_wind.py
+import matplotlib.pyplot as plt
+import pandas as pd
+import numpy as np
+
+# initial gird
+x = np.linspace(-2, 2, 17)
+y = np.linspace(-2, 2, 17)
+x, y = np.meshgrid(x, y)
+
+#read U, V
+dfU = pd.read_excel('u.xls', usecols=range(1, 18))
+dfV = pd.read_excel('v.xls', usecols=range(1, 18))
+
+U = dfU.values
+V = dfV.values
+
+#read u_prime, v_prime, phi
+up = []
+vp = []
+phi = []
+with open('up.txt', 'r') as f:
+    for line in f:
+        up = list(map(float, line.split()))
+    f.close()
+
+with open('vp.txt', 'r') as f:
+    for line in f:
+        vp = list(map(float, line.split()))
+    f.close()
+
+with open('phi.txt', 'r') as f:
+    for line in f:
+        phi = list(map(float, line.split()))
+    f.close()
+
+up = np.array(up).reshape(17, 17)
+vp = np.array(vp).reshape(17, 17)
+phi = np.array(phi).reshape(17, 17)
+
+# plot original wind field
+plt.subplots(figsize=(12, 8))
+
+plt.xlabel('X')
+plt.ylabel('Y')
+
+plt.quiver(x, y, U, V)
+plt.title('Original Wind Field')
+plt.savefig('wind.png')
+plt.close()
+
+# plot div wind field
+plt.subplots(figsize=(12, 8))
+
+plt.xlabel('X')
+plt.ylabel('Y')
+
+#  contourf = plt.contourf(x, y, phi, cmap='flag')
+contour = plt.contour(x, y, phi, np.arange(-0.8, 0.601, 0.1), colors='k', linestyles='-')
+plt.quiver(x, y, up, vp)
+plt.clabel(contour, fontsize=10, colors='gray')
+#  plt.colorbar(contourf, drawedges=True, orientation='vertical',spacing='uniform')
+plt.title('Divergence Wind Field')
+plt.savefig('div_wind.png')
+plt.close()
+
+# plot vor wind field
+plt.subplots(figsize=(12, 8))
+
+plt.xlabel('X')
+plt.ylabel('Y')
+
+plt.quiver(x, y, U - up, V - vp)
+plt.title('Vortex Wind Field')
+plt.savefig('vor_wind.png')
+plt.close()
+~~~
+
 
 
 ## 三、运行结果
@@ -152,208 +276,93 @@ make run
 git clone https://github.com/ZZY000926/numericalMethods.git && cd numericalMethods/作业7 && make run
 ~~~
 
+截图：
+
 ![result](result.png)
+![wind](wind.png)
+![div_wind](div_wind.png)
+![vor_wind](vor_wind.png)
 
 ## 四、分析报告
 
-### 问题1
 
-#### 1.问题分析
+### 1.问题分析
 
-要求使用变步长积分法计算如下的定积分值：
-$$
-I=\int_0^1\frac{dx}{\sqrt{1+x^3}}
-$$
-算法 1：利用复化辛普森公式进行计算，逐渐增加区间个数 n，直至前后两次积
-分值之差小于 $10^{-6}$.
-算法 2：利用复化梯形公式重复上述计算.
-
-通过对比上述两种方法计算结果的收敛速度，理解这两种方法的优劣。
-
-#### 2.算法细节
-
-##### （1）变步长复化梯形积分的实现
-
-课本上给出了变步长复化梯形积分公式：
+已知某区域纬向风场 u (u.xls)和经向风场 v (v.xls)，用差分格式求解该区域的速度势函数及相应的辐散风分布.
 $$
 \begin{aligned}
-T_{2N}=\frac{1}{2}T_N+h_{2N}\sum_{k=1}^{N}f(a+(2k-1)h_{2N})\\
+\frac{\partial^2\phi}{{\partial x}^2} + \frac{\partial^2\phi}{{\partial y}^2} = -\nabla\cdot \vec{V} = -D \quad\quad &(1)\\
+u^{\prime} = - \frac{\partial \phi}{\partial x} \quad\quad\quad\quad\quad\quad\quad\quad\quad\ \  &(2)\\
+v^{\prime} = - \frac{\partial \phi}{\partial y} \quad\quad\quad\quad\quad\quad\quad\quad\quad\ \  &(3)\\
 \end{aligned}
 $$
-其中$N$为区间等分数，$f(x)$为被积函数，$h_{N}$为步长.
+步骤：
 
-代入公式即可.
+1）根据给出 u, v 求出对应每个格点上的散度值 D(i, j)；
 
-变步长复化梯形积分在 functions.f90 中的 function composite_tixing 中实现.
+2）构造二阶差分格式，采用超松弛迭代法求解泊松方程 (1)，得到每个格点上的速度势函数 φ(i, j)；
 
-##### （2）变步长复化辛普森积分的实现
+3）用 φ(i, j) 代入公式（2）和（3），分别求出辐散风分量，将势函数叠加辐散风场画出该区域的空间分布图.
 
-首先推导变步长复化辛普森积分公式.
+分析：按照步骤实现即可.
 
-由课本P124式（5.36）得，
+### 2.算法细节
+
+#### （1）文件的读入
+
+由于 Fortran 对 .xls 文件的读入方式较为繁琐，所以先用 Python 将 .xls 文件转换为 .txt 文件（python 文件名：xls2arr.py），然后 Fortran 直接在 .txt 文件中读取数据.
+
+为了方便后面的计算，在将 .xls 转换为 .txt 后在区域的边缘加了一圈 0 .
+
+#### （2）散度 D(i, j) 的计算
+
+使用中心差分进行计算，公式如下：
 $$
+D_{i, j} = \frac{u_{i+1,j}-u_{i-1,j}}{2\Delta x} + \frac{v_{i,j+1}-v_{i,j-1}}{2\Delta y}=\frac{u_{i+1,j}-u_{i-1,j} + v_{i,j+1}-v_{i,j-1}}{2\Delta h} \\
+\Delta x = \Delta y = \Delta h=0.25
+$$
+散度的计算由子程序 calc_div(D, U, V, h) 实现
+
+#### （3）泊松方程的求解
+
+使用超松弛迭代法（SOR）进行求解方程（1），公式如下：
+$$
+\left\{
 \begin{aligned}
-S_{N} = \frac{4T_{2N}-T_N}{3}, S_{2N} = \frac{4T_{4N}-T_{2N}}{3}
+
+R_{i,j}^{(v,v+1)}&=\frac{\phi_{i+1,j}^{(v)}+\phi_{i,j+1}^{(v)}+\phi_{i-1,j}^{(v+1)}+\phi_{i,j-1}^{(v+1)}-4\phi_{i,j}^{(v)}}{{(\Delta h)}^2}-D_{i, j} \\\\
+\phi_{i,j}^{(v+1)} &= \phi_{i,j}^{(v)} + \frac{\alpha}{4}{(\Delta h)}^2R_{i,j}^{(v,v+1)}
 \end{aligned}
+\right.
+\\
+\Delta x = \Delta y = \Delta h =0.25,\ \alpha=1.6
 $$
-将$T_{4N},T_{2N},T_{N}$用变步长复化梯形积分展开，
-$$
-\begin{aligned}
-T_{2N}&=\frac{1}{2}T_N+h_{2N}\sum_{k=1}^{N}f(a+(2k-1)h_{2N})\\
-T_{4N}&=\frac{1}{2}T_{2N}+h_{4N}\sum_{k=1}^{2N}f(a+(2k-1)h_{4N})\\
-&=\frac{1}{4}T_N+\frac{1}{2}h_{2N}\sum_{k=1}^{N}f(a+(2k-1)h_{2N})+\frac{1}{2}h_{2N}\sum_{k=1}^{2N}f(a+\frac{2k-1}{2}h_{2N})\\
-\end{aligned}
-$$
-用$S_{2N}-\frac{1}{2}S_N$，得
-$$
-\begin{aligned}
-S_{2N}-\frac{1}{2}S_N = \frac{1}{3}(4T_{4N}-3T_{2N}+\frac{1}{2}T_{N})
-= h_{2N}\sum_{k=1}^{2N}2f(a+\frac{2k-1}{2}h_{2N})-h_{2N}\sum_{k=1}^{N}f(a+(2k-1)h_{2N})
-\end{aligned}
-$$
-即
-$$
-S_{2N}=\frac{1}{2}S_N +h_{2N}\sum_{k=1}^{2N}2f(a+\frac{2k-1}{2}h_{2N})-h_{2N}\sum_{k=1}^{N}f(a+(2k-1)h_{2N})
-$$
+初值为 $\phi_{i,j}^{(0)}=0$，迭代终止判据为 ${\lvert {\phi_{i,j}^{(v+1)} - \phi_{i,j}^{(v)}} \rvert}_{max} \lt 10^{-7}$ .
 
+泊松方程的求解由子程序 solve_equation(D, phi, h, eps) 实现.
 
-然后代入公式即可.
+### 3.编程思路
 
-变步长复化辛普森积分在 functions.f90 中的 function composite_simpson 中实现.
+主要子程序：
 
-#### 3.编程思路
+read_uv(U, V)：从 u.txt 和 v.txt 中读取风速分量；
 
-主要函数：
+calc_div(D, U, V, h) ：计算散度；
 
-f(gamma_x, x)：计算$f(x)=\frac{1}{\sqrt{1+x^3}}$，第一个参数 gamma\_x 是为了使求积函数与第二问兼容，在第一问中用不到.
+subroutine solve_equation(D, phi, h, eps)：解泊松方程；
 
-composite_tixing(a, b, n, func, eps, gamma_x)：实现变步长复化梯形积分.
+calc_uv(phi, U_p, V_p, h)：由速度势 $\phi$ 计算辐散风；
 
-composite_simpson(a, b, n, func, eps, gamma_x)：实现变步长复化辛普森积分.
+### 4.运行结果分析
 
-#### 4.运行结果分析
+势函数叠加辐散风场图：
 
-辛普森积分：积分值为 0.90960463457311702，区间个数 n 为 8.
+![div_wind](div_wind.png)
 
-梯形积分：积分值为 0.90960356828782429，区间个数 n 为 256. 
+原风场图：
+![wind](wind.png)
 
-在 Wolfram Alpha[2] 上得到的积分值如下图所示：
-
-![wolframalpha1](wolframalpha1.png)
-
-
-
-精度 eps = 1e-6 时，辛普森积分得到的结果与参考值的小数点前六位相同，梯形积分与参考值的小数点前六位相差0.000001.
-
-可以看出辛普森积分收敛更快且误差更小，所以辛普森积分优于梯形积分.
-
-### 问题2
-
-#### 1.问题分析
-
-Gamma函数定义如下：
-$$
-\Gamma(x)=\int_{0}^{\infty}t^{x-1}e^{-t}dt,\ x>0
-$$
-a) 对无限的积分区间进行截断，使用复化积分公式（自由选取梯形或辛普森）来计算 Gamma 函数值。通过实验和分析探索来决定截断的范围，主要是考虑到
-效率和精度之间的平衡.
-b) 高斯拉盖尔积分（Gauss-Laguerre or Gauss-Raguel）是用来计算在区间 $[0, \infty]$，权重函数为 $e^{-t}$ 的积分. 通过查看参考资料（比如数学手册），找到高斯拉盖尔积分公式的积分节点及求积公式系数，计算 Gamma 函数值.
-对上面两种方法，选取在 1 和 10 之间的几个 x，求 Gamma 函数的值. 选取一个的精度，比较不同方法的效率.
-
-分析：对于a)，由第一问可知，辛普森积分在收敛速度和精度上都优于梯形积分，因此选择辛普森积分. 对于b)，代入公式即可
-
-#### 2.算法细节
-
-##### （1）Gauss-Raguel积分的实现
-
-Gauss-Raguel积分公式如下：
-$$
-\int_{0}^{\infty}e^{-t}u(x,t)dt=\sum_{i=1}^{N}w_i\cdot u(x,t_i)
-$$
-其中 $w_i$，$t_i$ 分别为积分系数和积分节点.
-
-在本题中 $u(x,t)=t^{x-1}$ 代入公式即可.
-
-Gauss-Raguel积分在 functions.f90 中的 function gauss_raguel 中实现.
-
-##### （2）$w_i$，$t_i$ 的获取
-
-$t_i$ 为拉盖尔多项式（Raguel polynomial）$L_n(t)$ 的第 n 个根，$w_i$ 由以下的式子给出[1]：
-$$
-w_i=\frac{t_i}{(n+1)^2[l_{n+1}(t_i)]^2}
-$$
-以下的 python 程序将 n = 5, ... 40 的 $t_i$，$w_i$ 输出到文件 data5.txt, ... data40.txt（需要安装 sympy 库）：
-
-~~~python
-#!/usr/bin/env python3
-from sympy import *
-
-def lag_weights_roots(n):
-    x = Symbol('x')
-    roots = Poly(laguerre(n, x)).all_roots()
-    x_i = [rt.evalf(20) for rt in roots]
-    w_i = [(rt/((n+1)*laguerre(n+1, rt))**2).evalf(20) for rt in roots]
-    return x_i, w_i
-
-for i in range(5, 41):
-    file_path = './nodes/'
-    file_name = 'data' + str(i) + '.txt'
-    with open(file_path + file_name, 'w') as f:
-        for j in range(i):
-            f.write(str(lag_weights_roots(i)[0][j]) + ' ' + str(lag_weights_roots(i)[1][j]) + '\n')
-~~~
-
-随后 fortran 的 gauss_raguel 函数只需要在 datan.txt 中读取 $w_i$，$t_i$ 即可.
-
-#### 3.编程思路
-
-主要函数：
-
-g(x, t)：计算 Gamma 函数中的被积函数 $t^{x-1}e^{-t}$.
-
-u(x, t)：计算 $u(x, t) = t^{x-1}$.
-
-gauss_raguel(n, func, gamma_x)：实现 Gauss-Raguel 积分
-
-#### 4.运行结果分析
-
-对于辛普森积分，设定精度 eps = 1e-6，改变 x，观察区间个数 n；
-
-对于 Gauss-Raguel 积分，设定区间个数 n，改变 x，观察精度变化.
-
-辛普森积分：
-|积分值|区间个数 n|x|
-|------|-|-|
-|  1.0000000654568622       |       512 |  1.0000000000000000     |
-|  23.999999796514452       |       256 |  5.0000000000000000     |
-|  362880.00000000128       |       256 |  10.000000000000000     |
-|57.261293398457610     |         128 |  5.5555550000000000|
-|  2.2880380403238654       |       512 |  3.1415929999999999 |
-
-Gauss-Raguel 积分：
-|积分值|区间个数 n|x|
-|------|-|-|
-|0.99999999999999989 |           5  | 1.0000000000000000     |
-|23.999999999999996   |           5  | 5.0000000000000000     |
-|362879.99999999988   |            5 |  10.000000000000000     |
-|57.261285393129086     |          20 |  5.5555550000000000 |
-| 2.2880387032435197        |       60 |  3.1415929999999999 |
-
-根据 Gamma 函数的性质 $\Gamma(N) = (N-1)!$，可知当 x = 1.0, 5.0, 10.0 时，辛普森积分取 512 或 256 个区间，Gauss-Raduel 积分取 5 个区间，后者精度高于前者.
-
-当 x 不是整数时，将积分值与 Wolfram Alpha 给出的参考值做比较.
-
-在 Wolfram Alpha 上得到的积分值如下图所示：
-
-![wolframalpha2](wolframalpha2.png)
-
-![wolframalpha3](wolframalpha3.png)
-
-当 x = 5.555555 时，辛普森积分取 128 个区间，Gauss-Radeul 积分取 20 个区间，后者精度高于前者；
-
-当 x = 3.141593 时，辛普森积分取 512 个区间，Gauss-Radeul 积分取 60 个区间，后者精度高于前者.
-
-在所取的样本点中，Gauss-Raduel 积分均优于辛普森积分.
+从辐散风场图中可以看出，原风场在 (-0.5, -0.75) 和 (1.5, 1.75) 处有较强的辐合，在 (1.25, -0.5) 处有较强的辐散.
 
 ## 五、参考
 
