--- a/作业7/191830227_赵志宇_计算方法_第7次实习报告/计算方法上机实习7实习报告.md
+++ b/作业7/191830227_赵志宇_计算方法_第7次实习报告/计算方法上机实习7实习报告.md
@@ -168,7 +168,7 @@ with open('grid.txt', 'w') as f:
 ~~~
 
 ~~~python
-# plot_wind.py
+#plot_wind.py
 import matplotlib.pyplot as plt
 import pandas as pd
 import numpy as np
@@ -189,6 +189,7 @@ V = dfV.values
 up = []
 vp = []
 phi = []
+D = []
 with open('up.txt', 'r') as f:
     for line in f:
         up = list(map(float, line.split()))
@@ -204,9 +205,17 @@ with open('phi.txt', 'r') as f:
         phi = list(map(float, line.split()))
     f.close()
 
+with open('D.txt', 'r') as f:
+    for line in f:
+        D = list(map(float, line.split()))
+    f.close()
+
 up = np.array(up).reshape(17, 17)
 vp = np.array(vp).reshape(17, 17)
 phi = np.array(phi).reshape(17, 17)
+D = np.array(D).reshape(17, 17)
+
+print(U[0])
 
 # plot original wind field
 plt.subplots(figsize=(12, 8))
@@ -214,8 +223,12 @@ plt.subplots(figsize=(12, 8))
 plt.xlabel('X')
 plt.ylabel('Y')
 
+contour = plt.contour(x, y, D, np.arange(-4, 3.5, 0.5), colors='gray', linestyles='-')
+contour.collections[0].set_label('Divergence')
+plt.clabel(contour, fontsize=10, colors='gray')
 plt.quiver(x, y, U, V)
 plt.title('Original Wind Field')
+plt.legend()
 plt.savefig('wind.png')
 plt.close()
 
@@ -226,23 +239,14 @@ plt.xlabel('X')
 plt.ylabel('Y')
 
 #  contourf = plt.contourf(x, y, phi, cmap='flag')
-contour = plt.contour(x, y, phi, np.arange(-0.8, 0.601, 0.1), colors='k', linestyles='-')
+contour = plt.contour(x, y, phi, np.arange(-0.8, 0.601, 0.1), colors='gray', linestyles='-')
+contour.collections[0].set_label('Velocity Potential')
 plt.quiver(x, y, up, vp)
 plt.clabel(contour, fontsize=10, colors='gray')
 #  plt.colorbar(contourf, drawedges=True, orientation='vertical',spacing='uniform')
 plt.title('Divergence Wind Field')
+plt.legend()
 plt.savefig('div_wind.png')
-plt.close()
-
-# plot vor wind field
-plt.subplots(figsize=(12, 8))
-
-plt.xlabel('X')
-plt.ylabel('Y')
-
-plt.quiver(x, y, U - up, V - vp)
-plt.title('Vortex Wind Field')
-plt.savefig('vor_wind.png')
 plt.close()
 ~~~
 
@@ -266,7 +270,6 @@ git clone https://github.com/ZZY000926/numericalMethods.git && cd numericalMetho
 ![result](result.png)
 ![wind](wind.png)
 ![div_wind](div_wind.png)
-![vor_wind](vor_wind.png)
 
 ## 四、分析报告
 
@@ -315,7 +318,7 @@ $$
 \left\{
 \begin{aligned}
 
-R_{i,j}^{(v,v+1)}&=\frac{\phi_{i+1,j}^{(v)}+\phi_{i,j+1}^{(v)}+\phi_{i-1,j}^{(v+1)}+\phi_{i,j-1}^{(v+1)}-4\phi_{i,j}^{(v)}}{{(\Delta h)}^2}-D_{i, j} \\\\
+R_{i,j}^{(v,v+1)}&=\frac{\phi_{i+1,j}^{(v)}+\phi_{i,j+1}^{(v)}+\phi_{i-1,j}^{(v+1)}+\phi_{i,j-1}^{(v+1)}-4\phi_{i,j}^{(v)}}{{(\Delta h)}^2} + D_{i, j} \\\\
 \phi_{i,j}^{(v+1)} &= \phi_{i,j}^{(v)} + \frac{\alpha}{4}{(\Delta h)}^2R_{i,j}^{(v,v+1)}
 \end{aligned}
 \right.
@@ -340,10 +343,10 @@ calc_uv(phi, U_p, V_p, h)：由速度势 $\phi$ 计算辐散风；
 
 ### 4.运行结果分析
 
-原风场图：
+散度值叠加原风场图：
 ![wind](wind.png)
 
 势函数叠加辐散风场图：
 ![div_wind](div_wind.png)
 
-从辐散风场图中可以看出，原风场在 (-0.5, -0.75) 和 (1.5, 1.75) 处有较强的辐合，在 (1.25, -0.5) 处有较强的辐散.
+从辐散风场图中可以看出，原风场在 (-0.5, -0.75) 和 (1.5, 1.75) 处有较强的辐散，在 (1.25, -0.5) 处有较强的辐合.
